--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,57 @@
-// TODO
+.Container {
+  margin: 0 auto;
+  max-width: 43.75rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 100%;
+}
+
+.Title {
+  font-weight: 700;
+  font-size: 1.75rem;
+  line-height: 2.125rem;
+  letter-spacing: .031rem;
+  color: var(--color-heading);
+  font-style: normal;
+}
+
+.Text {
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 1.375rem;
+  color: var(--color-body);
+  font-style: normal;
+}
+
+.TextSmall {
+  composes: Text;
+  font-size: 0.875rem;
+  line-height: 1.059rem;
+  color: var(--color-info);
+}
+
+.Link {
+  background-color: transparent;
+  border: none;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.125rem;
+  line-height: 1.361rem;
+  color: var(--color-highlight);
+  transition: filter 250ms;
+  outline: none;
+
+  &:hover {
+    cursor: pointer;
+    filter: brightness(.8);
+  }
+
+  &:focus {
+    box-shadow: 0 0 0 .125rem var(--color-highlight);
+  }
+}
+
+.Icon {
+  height: 1.25rem;
+  width: 1.25rem;
+}
