--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,31 @@
+:root {
+  --color-highlight: #FF57B2;
+  --color-heading: #F8F8F8;
+  --color-background: #1A1D23;
+  --color-info: #BBBBBB;
+  --color-body: #D7D7D7;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-// TODO
+html {
+  @media (max-width: 1080px) {
+    font-size: 93.75%;
+  }
+
+  @media (max-width: 720px) {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background-color: var(--color-background);
+  color: var(--color-body);
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  padding-bottom: 4.125rem;
+}
