--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,9 +1,19 @@
 .Container {
   margin: 0 auto;
-  max-width: 43.75rem;
+  max-width: 45.75rem;
   padding-left: 1rem;
   padding-right: 1rem;
   width: 100%;
+}
+
+.Focus {
+  transition: box-shadow 250ms;
+
+  &:focus,
+  &:hover {
+    outline: none;
+    box-shadow: 0 0 0 .125rem var(--color-highlight);
+  }
 }
 
 .Title {
@@ -31,27 +41,19 @@
 }
 
 .Link {
+  composes: Focus;
+  composes: Text;
   background-color: transparent;
   border: none;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 1.125rem;
-  line-height: 1.361rem;
   color: var(--color-highlight);
-  transition: filter 250ms;
-  outline: none;
 
   &:hover {
     cursor: pointer;
-    filter: brightness(.8);
-  }
-
-  &:focus {
-    box-shadow: 0 0 0 .125rem var(--color-highlight);
   }
 }
 
 .Icon {
+  color: var(--color-info);
   height: 1.25rem;
   width: 1.25rem;
 }
