--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,79 @@
-// TODO
+.Content {
+  composes: Container from '../../styles/common.module.scss';
+  margin-top: 4rem;
+
+  a {
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    color: var(--color-body);
+    font-style: normal;
+    transition: box-shadow 250ms;
+    background-color: transparent;
+    border: none;
+    color: var(--color-highlight);
+    padding: .25rem;
+    display: inline-block;
+    text-decoration: none;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &:focus,
+    &:hover {
+      outline: none;
+      box-shadow: 0 0 0 .125rem var(--color-highlight);
+    }
+  }
+
+  h2 {
+    font-weight: 700;
+    font-size: 1.75rem;
+    line-height: 2.125rem;
+    letter-spacing: .031rem;
+    color: var(--color-heading);
+    font-style: normal;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    color: var(--color-body);
+    font-style: normal;
+  }
+
+  p + p {
+    margin-top: 1rem;
+  }
+
+  ul {
+    margin-top: 1rem;
+    padding-left: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  code, pre {
+    border: 1px solid var(--color-body);
+    background-color: #222;
+    word-wrap: break-word;
+    padding: 1rem;
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    color: var(--color-body);
+    font-style: normal;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    line-height: 2rem;
+    overflow-x: auto;
+  }
+}
+
+.Section {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
