feat(prismic): add preview mode

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -13,3 +13,10 @@
   margin-top: 2.125rem;
   padding: 1rem;
 }
+
+.ExitPreviewMode {
+  composes: ExitPreviewMode from '../styles/common.module.scss';
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 5.5rem;
+}
