--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -64,3 +64,21 @@
   height: 1.25rem;
   width: 1.25rem;
 }
+
+.ExitPreviewMode {
+  display: block;
+  background-color: var(--color-heading);
+  padding: 1.125rem;
+  border-radius: 0.25rem;
+  color: var(--color-background);
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 1.125rem;
+  line-height: 1.361rem;
+  text-align: center;
+  transition: filter 250ms;
+
+  &:hover {
+    filter: brightness(.8);
+  }
+}
