--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -100,3 +100,57 @@
   margin-right: 1rem;
   margin-top: 5.5rem;
 }
+
+.Pages {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 2rem;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+
+  &::before {
+    content: '';
+    height: 1px;
+    background-color: var(--color-body);
+    display: block;
+    width: 100%;
+    top: 0;
+    position: absolute;
+    opacity: .1;
+  }
+}
+
+.PageLink {
+  composes: Link from '../../styles/common.module.scss';
+  text-decoration: none;
+  display: inline-block;
+  flex-shrink: 0;
+  flex-basis: 50%;
+  padding: 1rem;
+  margin: -1rem;
+}
+
+.PageLinkTitle {
+  composes: Text from '../../styles/common.module.scss';
+  display: inline-block;
+}
+
+.PageLinkLabel {
+  margin-top: 0.5rem;
+  display: block;
+}
+
+.PageLinkPrev {
+  composes: PageLink;
+  padding-right: 1rem;
+}
+
+.PageLinkNext {
+  composes: PageLink;
+  text-align: right;
+  padding-left: 1rem;
+  margin-left: auto;
+}
