--- a/src/components/PostHeader/post-header.module.scss
+++ b/src/components/PostHeader/post-header.module.scss
@@ -28,3 +28,11 @@
     margin-left: 1.5rem;
   }
 }
+
+.LastEdition {
+  composes: TextSmall from '../../styles/common.module.scss';
+  display: inline-block;
+  margin-top: 1.125rem;
+  padding-left: 1rem;
+  font-style: italic;
+}
